--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				
 				<div class="col-xs-2" id="launchButton">
-					<button class="btn btn-primary">Launch</button>
+					<button class="btn btn-primary" onClick="launch();">Launch</button>
 				</div>
 				
 				<div id="iconsParent">
