--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
 				</div>				
 
 			</div>
+			
+			<br>
+			<div class="row">
+				<div id="results">
+				</div>
+			</div>
+			
+			<div class="row">
+				<div id="footer">
+				</div>
+			</div>
 
 		</div>
 	</body>
