Multi language support
- Ajout bouton choix langage
- Chargement des cartes du langage

--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
 					<input type="text" class="form-control" id="acronym" placeholder="Acronym">
 				</div>
 				
-				<div class="col-xs-2" id="launchButton">
-					<button class="btn btn-primary" onClick="launch();">Launch</button>
+				<div class="col-xs-2" id="buttons">
+					<select class="form-control" id="languageSelect">
+						<option>EN</option>
+						<option>DE</option>
+						<option>ES</option>
+						<option>FR</option>
+						<option>IT</option>
+						<option>MX</option>
+						<option>PL</option>
+						<option>BR</option>
+					</select> 
+					<button class="btn btn-primary" id="launchButton" onClick="launch();">Launch</button>
 				</div>
 				
 				<div id="iconsParent">
