Standard / Wild toggle
- Ajout bouton Standard / Wild
- Ajout filtre des cartes selon format choisi

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 						<img src="img/classIcons/shaman.png" alt="Shaman" class="classIcon shaman" onclick="changeStatus('shaman');"/>				
 						<img src="img/classIcons/warlock.png" alt="Warlock" class="classIcon warlock" onclick="changeStatus('warlock');"/>
 						<img src="img/classIcons/warrior.png" alt="Warrior" class="classIcon warrior" onclick="changeStatus('warrior');"/>
+						<img src="img/wild.png" alt="Format" id="format" onClick="changeFormat();"/>
 					</div>
 				</div>				
 
