Correct "acronym" - "acrostic"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="row no-gutters">		
 				<div class="col-md-4 col-xs-10 nopadding">
 					<div class="input-group" id="buttons">
-						<input type="text" class="form-control" id="acronym" placeholder="Acronym">
+						<input type="text" class="form-control" id="acronym" placeholder="Acrostic">
 						<select class="form-control" id="languageSelect">
 							<option>EN</option>
 							<option>DE</option>
